[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/ChandelierSwinging.gd" type="Script" id=1]
[ext_resource path="res://Scripts/ChandelierBody.gd" type="Script" id=2]
[ext_resource path="res://Anims/SPRFR_ChandelierBody.tres" type="SpriteFrames" id=3]
[ext_resource path="res://Sprites/chandelier_hanger.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 143.553, 38.911 )

[sub_resource type="CircleShape2D" id=2]
radius = 80.5

[node name="ChandelierSwinging" type="Node2D"]
script = ExtResource( 1 )

[node name="SwingPivot" type="Node2D" parent="."]

[node name="Hanger" type="Sprite" parent="SwingPivot"]
position = Vector2( 0, 164.25 )
scale = Vector2( 4.5, 4.5 )
texture = ExtResource( 4 )

[node name="ChandelierBody" type="RigidBody2D" parent="SwingPivot"]
position = Vector2( 0, 391.5 )
collision_layer = 4
mode = 1
gravity_scale = 10.0
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="SwingPivot/ChandelierBody"]
scale = Vector2( 4.5, 4.5 )
frames = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwingPivot/ChandelierBody"]
position = Vector2( 0, 16.118 )
shape = SubResource( 1 )
disabled = true

[node name="BreakableLink" type="Area2D" parent="SwingPivot"]
position = Vector2( 0, 391.5 )
input_pickable = false
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwingPivot/BreakableLink"]
position = Vector2( 0, -48.318 )
shape = SubResource( 2 )
[connection signal="body_entered" from="SwingPivot/BreakableLink" to="." method="_on_BreakableLink_body_entered"]
